# cardgen

./: .env.example  .gitignore  BACKLOG.md  DEPLOYMENT.md  PLAN.md  README.md  docker-compose.yml  from_discuss.json  pyproject.toml  requirements.txt
cardgen/: __init__.py  __main__.py  cli.py  log_config.py  pipeline.py  routerai.py  wb_catalog.py
cardgen/web/: __init__.py  app.py
cardgen/web/static/: style.css
cardgen/web/templates/: index.html
info/: !Категории товаров.md  AI для карточек товаров на маркетплейсах.md  Анализ карточек конкурентов (конкуренты клиентов).md  Анализ карточки продукта (Qwen, ChatGPT, Gemini).md  Вспомогательные сервисы.md  Задачи, решаемые конкурентами.md  Зауск за 2 недели.md  Исследования конкурентов. MVP карточки wildberries.md  Конкуренты.md  На immers.cloud.md  Необходимые знания для проекта.md  Пайплайн по конкурентам wildberries.md  Пакеты услуг.md  Позиционирование.md  Предиктивная аналитика.md  Свой сервис карточек WB (поддомен).md  Финансовая модель, бюджетный сегмент.md  Экономическое обоснование сервера для ИИ.md
nginx/: Dockerfile  default.conf.template  docker-entrypoint.sh
web/: Dockerfile  app.vue  nuxt.config.ts  package-lock.json  package.json
web/composables/: useAuthSession.ts  useDirectus.ts  useDirectusAuth.ts
web/pages/: account.vue  forgot-password.vue  index.vue  login.vue  profile.vue  register.vue  reset-password.vue  reset-success.vue  verify-email.vue  verify-success.vue
web/server/api/: verify-registration.get.ts
web/utils/: verifyEmailRedirect.ts
