[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cardgen"
version = "0.1.0"
description = "CLI: prompt -> GPT -> Nano Banana generate -> GPT review (RouterAI)"
readme = "PLAN.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.40,<2",
    "python-dotenv>=1.0,<2",
]

[project.scripts]
cardgen = "cardgen.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cardgen*"]
