[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cardgen"
version = "0.1.0"
description = "Cardgen: CLI + web UI, RouterAI (GPT + Nano Banana)"
readme = "PLAN.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.40,<2",
    "python-dotenv>=1.0,<2",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "python-multipart>=0.0.9,<1",
    "jinja2>=3.1,<4",
]

[project.scripts]
cardgen = "cardgen.cli:main"
cardgen-serve = "cardgen.web.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cardgen*"]

[tool.setuptools.package-data]
cardgen = ["web/templates/*.html", "web/static/*"]
